Fixed exception when extract kmers fails